--- a/WebCalc02Q/src/main/resources/templates/res.html
+++ b/WebCalc02Q/src/main/resources/templates/res.html
@@ -8,9 +8,10 @@
 <body>
 	<p>計算結果です！</p>
 	<!-- 足し算表示欄 -->
-	<b th:text="${kotae}"></b>
+	<p><b th:text="${kotae}"></b></p>
 	<!--<b th:text="${kotae}"></b> <!--kotaeという変数を定義-->
 
+	<a href="calc">calcへリンクします</a>
 	<p></p>
 </body>
 </html>
