--- a/WebCalc02Q/src/main/resources/templates/res.html
+++ b/WebCalc02Q/src/main/resources/templates/res.html
@@ -11,7 +11,7 @@
 	<p><b th:text="${kotae}"></b></p>
 	<!--<b th:text="${kotae}"></b> <!--kotaeという変数を定義-->
 
-	<a href="calc">calcへリンクします</a>
+	<input type="button" onclick="history.back()" value="戻る">
 	<p></p>
 </body>
 </html>
