--- a/WebCalc02Q/src/main/resources/templates/res2.html
+++ b/WebCalc02Q/src/main/resources/templates/res2.html
@@ -8,10 +8,8 @@
 <body>
 	<p>エラーです</p>
 	<!-- 足し算表示欄 -->
-	<p><b th:text="${kotae}"></b></p>
 	<!--<b th:text="${kotae}"></b> <!--kotaeという変数を定義-->
 
-	<a href="calc">calcへリンクします</a>
-	<p></p>
+	<input type="button" onclick="history.back()" value="戻る">
 </body>
 </html>
